[project]
name = "lmsteer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "rich>=14.0.0",
    "textual>=3.3.0",
    "torch>=2.7.0",
    "transformers>=4.52.4",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.11.12",
    "pytest~=8.0.0",
    "pytest-asyncio~=0.23.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
